--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -16,10 +16,12 @@
      <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <title>VueZApp</title>
 </head>
-cioaids
+
 
 <body> 
-    <div id='app' class="container">
+    <div id="app" class="container">
+        
+
 
     </div>
     
