--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -20,9 +20,33 @@
 
 <body> 
     <div id="app" class="container">
-        <aside class="contenuto"></aside>
+        <aside class="side"></aside>
+          <!--Header  chat-->
+        <main class="contenuto">
+            <section class="contenuto-header">
+                    header app
+            </section>
+          <!--Chat-->
+            <section class="contenuto-main">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
+            </section>
+      <!--Footer chat-->
+            <section class="contenuto-footer">
+                      footer app
+            </section>
+        </main>
     </div>
-    
 
 
 
