--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -20,40 +20,54 @@
 
 <body> 
     <div id="app" class="container">
-        <aside class="side"></aside>
-          <!--Header  chat-->
+        <!--CONTACTS-->
+      <aside class="user">
+
+        <!--User Header-->
+        <section class="user-header">
+          user
+        </section>
+        <!--Notifications-->
+        <section class="notification">
+            notification
+        </section>
+        <!--Search Bar-->
+        <section class="search-bar">
+            search bar
+        </section>
+        <!--Main Contact-->
+        <section class="contacts">
+            <div class="contact">
+                contatto
+            </div>
+            <div class="contact">
+                contatto
+            </div>
+            <div class="contact">
+                contatto
+            </div>
+            <div class="contact">
+                contatto
+            </div>
+        </section>
+      </aside>
+
+        <!--CHAT-->
+
         <main class="chat">
+          <!--Chat header-->
             <section class="chat-header">
                     header app
             </section>
-          <!--Chat-->
+          <!--Messagges-->
             <section class="chat-main">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
+                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis minima in nulla. Non, ut exercitationem architecto dignissimos esse facere vitae officiis odio voluptas. Est quisquam amet asperiores blanditiis velit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
-                
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
             </section>
-      <!--Footer chat-->
+      <!--Chat Footer-->
             <section class="chat-footer">
                       footer app
             </section>
