--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -25,7 +25,23 @@
 
         <!--User Header-->
         <section class="user-header">
-          user
+            <div>
+                 <box class="image-user">
+                      
+                 </box> 
+            </div>
+            <h1>Franco Caneti</h1>
+        <ul class="ul-user">
+            <li class="li-user">
+                <i class="fas fa-circle-notch"></i>
+            </li>
+            <li class="li-user">
+                <i class="fas fa-comment-alt"></i>
+            </li>
+            <li class="li-user">
+                <i class="fas fa-ellipsis-v"></i>
+            </li>
+        </ul>
         </section>
         <!--Notifications-->
         <section class="notification">
@@ -49,6 +65,7 @@
             <div class="contact">
                 contatto
             </div>
+            
         </section>
       </aside>
 
