--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -45,7 +45,11 @@
         </section>
         <!--Notifications-->
         <section class="notification">
-            notification
+            <div>
+                <box class="notice">
+                    <i class="fas  fa-bell-slash "></i>
+                </box> 
+           </div>
         </section>
         <!--Search Bar-->
         <section class="search-bar">
