--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -30,7 +30,7 @@
                       
                  </box> 
             </div>
-            <h1>Franco Caneti</h1>
+            <h3>Franco </h3>
         <ul class="ul-user">
             <li class="li-user">
                 <i class="fas fa-circle-notch"></i>
@@ -47,9 +47,19 @@
         <section class="notification">
             <div>
                 <box class="notice">
-                    <i class="fas  fa-bell-slash "></i>
+                    <i class="fas  fa-bell-slash bell"></i>
                 </box> 
            </div>
+           <ul class="ul-not">
+               <li class="li-not">
+                   <h5>Ricevi notifiche di nuovi messaggi</h5>
+               </li>
+               <li class="li-not">
+                   <h6>
+                       Attiva nitifiche desktop
+                   </h6>
+               </li>
+           </ul>
         </section>
         <!--Search Bar-->
         <section class="search-bar">
@@ -58,17 +68,21 @@
         <!--Main Contact-->
         <section class="contacts">
             <div class="contact">
-                contatto
+              <img class="img-contact" src="./img/avatar_3.jpg" alt=""> 
+                 <h3 class="name-contact">Michele</h3> 
             </div>
             <div class="contact">
-                contatto
-            </div>
-            <div class="contact">
-                contatto
-            </div>
-            <div class="contact">
-                contatto
-            </div>
+                <img class="img-contact" src="./img/avatar_6.jpg" alt=""> 
+                   <h3 class="name-contact">Fabio</h3> 
+              </div>
+              <div class="contact">
+                <img class="img-contact" src="./img/avatar_8.jpg" alt=""> 
+                   <h3 class="name-contact">Samuele</h3> 
+              </div>
+              <div class="contact">
+                <img class="img-contact" src="./img/avatar_io.jpg" alt=""> 
+                   <h3 class="name-contact">Elisa</h3> 
+              </div>
             
         </section>
       </aside>
@@ -78,7 +92,28 @@
         <main class="chat">
           <!--Chat header-->
             <section class="chat-header">
-                    header app
+                <div>
+                    <img class="img-contact" src="./img/avatar_3.jpg" alt=""> 
+               </div>
+               <ul class="ul-not">
+                 <li class="li-not">
+                    <h4>Michele</h4>
+                 </li>
+                 <li class="li-not">
+                   <h6>Ultimo Accesso oggi alle 15:53</h6>
+                 </li>
+               </ul>
+               <ul class="ul-header">
+                <li class="li-header">
+                    <i class="fas fa-search"></i>
+                </li>
+                <li class="li-header">
+                    <i class="fas fa-paperclip"></i>
+                </li>
+                <li class="li-header">
+                    <i class="fas fa-ellipsis-v"></i>
+                </li>
+            </ul>
             </section>
           <!--Messagges-->
             <section class="chat-main">
