--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -125,7 +125,10 @@
             </section>
       <!--Chat Footer-->
             <section class="chat-footer">
-                      footer app
+                <i class="far fa-smile f-i"></i>
+                  <input  class="new-messagge" type="text" 
+                   placeholder="Inserisci un elemento"/>
+                <i class="fas fa-microphone f-i"></i>
             </section>
         </main>
     </div>
