--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -63,7 +63,11 @@
         </section>
         <!--Search Bar-->
         <section class="search-bar">
-            search bar
+            <button class="search-buttom">
+                <i class="fas fa-search"></i>
+            </button>
+            <input class="search" type="search"placeholder="Cerca o inzia una nuova chat" >
+            
         </section>
         <!--Main Contact-->
         <section class="contacts">
@@ -125,7 +129,7 @@
             </section>
       <!--Chat Footer-->
             <section class="chat-footer">
-                <i class="far fa-smile f-i"></i>
+                <i class="far fa-smile f-i "></i>
                   <input  class="new-messagge" type="text" 
                    placeholder="Inserisci un elemento"/>
                 <i class="fas fa-microphone f-i"></i>
