--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -121,11 +121,15 @@
             </section>
           <!--Messagges-->
             <section class="chat-main">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat, et repellat tenetur inventore modi perferendis, est alias provident consectetur aut magni porro sed quod necessitatibus aliquid magnam cumque suscipit.</p>
-                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore optio sapiente voluptate? Ea quas possimus rerum placeat non, maxime sit iure officia ab nisi beatae cum doloremque, vitae excepturi? Doloribus.</p>
+                <div class="sent">
+                    <p class="testo">Messaggio</p>
+                    <p class="date">24/04/2021</p>
+                </div>
+
+                <div class="received">
+                    <p class="testo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nemo quibusdam, sequi laboriosam minima corporis eius hic accusantium rerum veniam praesentium voluptate quos cupiditate? Similique doloribus fugiat modi dolores nostrum.</p>
+                    <p class="date">26/04/2021</p>
+                </div>
             </section>
       <!--Chat Footer-->
             <section class="chat-footer">
