--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -72,7 +72,7 @@
         <!--Main Contact-->
         <section class="contacts">
             <div class="contact" v-for="contact in arraycontact">
-              <img class="img-contact" :src="aarraycontact[avatar]" alt=""> 
+              <img class="img-contact" src="" alt=""> 
                  <h3 class="name-contact">{{contact.name}}</h3> 
             </div>
             
