--- a/assets-boolzapp/index.html
+++ b/assets-boolzapp/index.html
@@ -25,12 +25,10 @@
 
         <!--User Header-->
         <section class="user-header">
-            <div>
-                 <box class="image-user">
-                      
-                 </box> 
+            <div> 
+               <img class="user-avatar" :src="'./img/avatar' + user.avatar + '.jpg'" alt="user.name"> 
             </div>
-            <h3>Franco </h3>
+            <h3>{{user.name}}</h3> 
         <ul class="ul-user">
             <li class="li-user">
                 <i class="fas fa-circle-notch"></i>
@@ -72,7 +70,7 @@
         <!--Main Contact-->
         <section class="contacts">
             <div class="contact" v-for="contact in arraycontact">
-              <img class="img-contact" src="" alt=""> 
+              <img class="img-contact" :src="'./img/avatar' + contact.avatar + '.jpg'" :alt="contact.name"> 
                  <h3 class="name-contact">{{contact.name}}</h3> 
             </div>
             
